--- a/login.html
+++ b/login.html
@@ -8,11 +8,11 @@
   <body>
     <h1>Inicio de sesión</h1>
     <form>
-      <label for="username">Numero de socio:</label>
+      <label for="username">Nombre de usuario:</label>
       <input type="text" id="username" name="username"><br><br>
-      <label for="password">Clave de 3 digitos:</label>
+      <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password"><br><br>
-      <input type="submit" value="Iniciar sesión" onclick="login()">
+      <input type="button" value="Iniciar sesión" onclick="login()">
     </form>
     <script src="login.js"></script>
   </body>
