--- a/index.html
+++ b/index.html
@@ -3,63 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Credencial de Miembro de Club</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      color: #333;
-    }
-
-    .card {
-      max-width: 500px;
-      margin: 20px auto;
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-      padding: 20px;
-    }
-
-    .card img {
-      display: block;
-      max-width: 100%;
-      height: auto;
-      margin: 0 auto;
-      border-radius: 50%;
-    }
-
-    .card h1 {
-      font-size: 1.8rem;
-      margin-top: 20px;
-      margin-bottom: 10px;
-    }
-
-    .card p {
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-    }
-
-    @media (max-width: 768px) {
-      .card {
-        max-width: 90%;
-      }
-
-      .card h1 {
-        font-size: 1.5rem;
-      }
-
-      .card p {
-        font-size: 1rem;
-      }
-    }
-  </style>
+  <title>Credencial - Sachachispas Club</title>
+  <link rel="stylesheet" href="css/credencial.css">
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
 <body>
   <div class="card">
-    <img src="https://via.placeholder.com/150" alt="Foto del Miembro">
-    <h1>Nombre del Miembro</h1>
-    <p>Número de Documento: 12345678</p>
-    <p>Número de Socio: 12345</p>
+    <img id="foto" src="" alt="Foto del Miembro">
+    <h1 id="nombre"></h1>
+    <p>Número de Documento: <span id="documento"></span></p>
+    <p>Número de Socio: <span id="socio"></span></p>
+    <p>Token De Socio: <span id="tsocio"></span></p>
+    <button class="imprimir" onclick="imprimirCredencial()">Imprimir</button>
+    <button class="imprimir" id="btnExport" onclick="capturarDatos()">Exportar como imagen</button>
+
+    
   </div>
+  
   <script src="login.js"></script>
 </body>
 </html>
