--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,13 +13,12 @@
     <h1 id="nombre"></h1>
     <p>Número de Documento: <span id="documento"></span></p>
     <p>Número de Socio: <span id="socio"></span></p>
-    <p>Token De Socio: <span id="tsocio"></span></p>
-    <button class="imprimir" onclick="imprimirCredencial()">Imprimir</button>
-    <button class="imprimir" id="btnExport" onclick="capturarDatos()">Exportar como imagen</button>
+    <p>Token De Socio:<span id="texto"></span></p>
+    <button class="imprimir" id="btnExport" onclick="capturarDatos()">Exportar Credencial</button>
 
     
   </div>
   
-  <script src="login.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
