--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta name="keywords" content="Futbol,f5,messi,argentina,f11,arquero,jugador,boca,river,sacachispas,club,">
+  <meta name="description" content="Sacachispas Club">
+  <meta name="author" content="nx">
+  <meta name="copyright" content="nx">
+  <meta name="google-site-verification" content="jRsexUj_it0Y0epMzXoAgwCXK5U_vrvYqlpWbCyIdHU" />
+  <meta name="robots" content="index">
+  <link rel="shortcut icon" href="https://media.discordapp.net/attachments/1072529065057198220/1093644991789801593/3d47aba6-d384-4d79-9a7d-3d1bd216f9b6.jpg" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Credencial - Sachachispas Club</title>
+  <title>Sachachispas Club</title>
   <link rel="stylesheet" href="css/credencial.css">
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
 <body>
-  <div class="card">
+  <div class="card" id="crede">
     <img id="foto" src="" alt="Foto del Miembro">
     <h1 id="nombre"></h1>
     <p>Número de Documento: <span id="documento"></span></p>
     <p>Número de Socio: <span id="socio"></span></p>
     <p>Token De Socio:<span id="texto"></span></p>
-    <button class="imprimir" id="btnExport" onclick="capturarDatos()">Exportar Credencial</button>
+    <button class="imprimir" id="shareBtn">Compartir</button>
 
     
   </div>
