--- a/login/index.html
+++ b/login/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="keywords" content="Futbol,f5,messi,argentina,f11,arquero,jugador,boca,river,sacachispas,club,">
+    <meta name="description" content="Sacachispas Club">
+    <meta name="author" content="nx">
+    <meta name="copyright" content="nx">
+    <meta name="google-site-verification" content="jRsexUj_it0Y0epMzXoAgwCXK5U_vrvYqlpWbCyIdHU" />
+    <meta name="robots" content="index">
+    <link rel="shortcut icon" href="https://media.discordapp.net/attachments/1072529065057198220/1093644991789801593/3d47aba6-d384-4d79-9a7d-3d1bd216f9b6.jpg" type="image/x-icon">
     <meta charset="UTF-8">
-    <title>Inicio de sesión</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sacachispas Club - Inicio</title>
     <link rel="stylesheet" href="login.css">
     <script src="login.js"></script>
   </head>
